--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -1883,6 +1883,11 @@ span.smallcaps {
 	/*	Mode selectors.
 	 */
 	--GW-mode-selector-mobile-background-color: rgba(18, 18, 18, 0.75);
+
+	/*	Wikipedia images assume a white background; transparent images don’t 
+		look right if that assumption is violated.
+	 */
+	--GW-wikipedia-image-background-color: #fff;
 }
 
 /*  The ‘fill’ attribute of the SVGs is modified in dark mode.
@@ -2177,6 +2182,10 @@ a[data-link-icon-type*='svg']::after {
  */
 .annotation.wikipedia-entry .mwe-math-element img {
 	filter: invert(1);
+}
+
+.annotation.wikipedia-entry img {
+	background-color: var(--GW-wikipedia-image-background-color);
 }
 
 /*	Popups-disabled icon/button.
