default.css: inflation adjustment: +spacing tweaks to separate sup/sub (apparently this worked implicitly before when sup came first but needs to be explicitly done when sub does, and they overlap without it)

--- a/css/default.css
+++ b/css/default.css
@@ -2287,10 +2287,11 @@ p {
 }
 
 /*  SUBSCRIPT+SUPERSCRIPT (necessary for inflation adjuster, and other math)
-    */
+ */
 .subsup {
     display: inline-block;
     margin-left: 0.1em;
+    margin-right: 0.1em;
     text-indent: initial; /* override the `p + p { text-indent: 2.5em; }` */
 }
 .subsup sup,
@@ -2298,10 +2299,13 @@ p {
     position: relative;
     display: block;
     font-size: 0.7em;
-    line-height: 0.7;
+    line-height: 0.75;
 }
 .subsup sup {
-    top: 0.25em;
+    top: 0.20em;
+}
+.subsup sub {
+    bottom: -0.40em;
 }
 /*  Make sure that adjusted prices move as a block: no breaking in the middle between the price & sup/sub; this works better than trying to use no-break Unicode entities
     */
