--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -1215,3 +1215,95 @@ span.smallcaps {
 /*	See /static/js/dark-mode.js and /static/css/dark-mode.css; this allows the
 	user to toggle at runtime.
  */
+
+
+/*********************/
+/* SPECIAL OCCASIONS */
+/*********************/
+
+/*=-----------=*/
+/*= Halloween =*/
+/*=-----------=*/
+
+body.special-halloween-dark {
+	--GW-blood-red: #b00;
+	--GW-blood-red-dried: #700;
+	--GW-blood-red-arterial: #e00;
+
+	--GW-sidebar-horizontal-rule-color: var(--GW-blood-red);
+
+	--GW-TOC-border-color: var(--GW-blood-red-dried);
+	--GW-abstract-border-color: var(--GW-blood-red-dried);
+
+	--GW-pre-element-border-color: var(--GW-blood-red-dried);
+
+	--GW-epigraph-quotation-mark-color: var(--GW-blood-red-dried);
+
+	--GW-H1-box-shadow-line-color: var(--GW-blood-red);
+	--GW-H2-bottom-border-color: var(--GW-blood-red);
+
+    --GW-drop-caps-yinit-color: var(--GW-blood-red);
+    --GW-drop-caps-yinit-text-shadow-color: var(--GW-blood-red);
+    --GW-drop-caps-de-zs-color: var(--GW-blood-red);
+    --GW-drop-caps-cheshire-color: var(--GW-blood-red);
+    --GW-drop-caps-kanzlei-color: var(--GW-blood-red);
+
+	--GW-figure-outline-color: var(--GW-blood-red-dried);
+	--GW-figure-caption-outline-color: var(--GW-blood-red);
+
+	--GW-footnotes-section-top-rule-color: var(--GW-blood-red-dried);
+	--GW-footnote-border-color: var(--GW-blood-red-arterial);
+	--GW-sidenote-highlight-box-shadow-color: var(--GW-blood-red-arterial);
+	--GW-footnote-backlink-border-color: var(--GW-blood-red);
+
+	--GW-sidenote-self-link-border-color: var(--GW-blood-red-arterial);
+	--GW-sidenote-border-color: var(--GW-blood-red-arterial);
+
+	--GW-math-block-scrollbar-border-color: var(--GW-blood-red);
+
+	--GW-mode-selector-border-color: var(--GW-blood-red-arterial);
+	--GW-mode-selector-border-hover-color: var(--GW-blood-red-dried);
+
+	--GW-back-to-top-link-color: var(--GW-blood-red-dried);
+
+	--GW-body-link-hover-color: var(--GW-blood-red-arterial);
+
+	--GW-footnote-ref-highlight-box-shadow-color: var(--GW-blood-red);
+}
+
+body.special-halloween-dark blockquote {
+	--GW-blockquote-border-color: var(--GW-blood-red-dried);
+}
+
+body.special-halloween-dark #logo {
+	color: var(--GW-blood-red);
+}
+
+body.special-halloween-dark #navigation a {
+	color: var(--GW-blood-red);
+}
+
+body.special-halloween-dark h1,
+body.special-halloween-dark h2,
+body.special-halloween-dark h3,
+body.special-halloween-dark h4,
+body.special-halloween-dark h5,
+body.special-halloween-dark h6 {
+	--GW-body-text-color: var(--GW-blood-red);
+	--GW-body-link-color: var(--GW-blood-red);
+
+	color: var(--GW-body-text-color);
+}
+
+@media only screen and (hover: hover) {
+	body.special-halloween-dark #ui-elements-container .mode-selector {
+		outline-style: dotted;
+		outline-width: 1px;
+		outline-color: var(--GW-mode-selector-border-color);
+	}
+	body.special-halloween-dark #ui-elements-container .mode-selector:hover {
+		outline-style: double;
+		outline-width: 3px;
+		outline-color: var(--GW-mode-selector-border-hover-color);
+	}
+}
