Enable Halloween mode

--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -3661,7 +3661,7 @@ document.addEventListener("readystatechange", () => {
 /*********************/
 
 GW.specialOccasions = [
-	[ "halloween", () => false, () => {
+	[ "halloween", () => true, () => {
 		let specialClass = DarkMode.currentMode() == "dark"
 						   ? "special-halloween-dark" 
 						   : "special-halloween-light";
