--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -3660,26 +3660,45 @@ document.addEventListener("readystatechange", () => {
 /* SPECIAL OCCASIONS */
 /*********************/
 
+/*	If a special function is provided to apply classes, one should also be 
+	provided to remove those classes. (See the ‘halloween’ entry for example.)
+ */
 GW.specialOccasions = [
 	[ "halloween", () => true, () => {
-		let specialClass = DarkMode.currentMode() == "dark"
+		document.body.classList.remove("special-halloween-dark", "special-halloween-light");
+		let specialClass = DarkMode.computedMode() == "dark" 
 						   ? "special-halloween-dark" 
 						   : "special-halloween-light";
 		document.body.classList.add(specialClass);
+	  }, () => {
+	  	document.body.classList.remove("special-halloween-dark", "special-halloween-light");
 	  } ],
 	[ "christmas", () => false ],
 ];
 
-doWhenBodyExists(() => {
+function applySpecialOccasionClasses() {
 	for (occasion of GW.specialOccasions) {
-		let [ name, test, action ] = occasion;
+		let [ name, test, doIfTrue, doIfFalse ] = occasion;
 		if (test()) {
-			if (action)
-				action();
+			if (doIfTrue)
+				doIfTrue();
 			else
 				document.body.classList.add("special-" + name);
+		} else {
+			if (doIfFalse)
+				doIfFalse();
+			else if (!doIfTrue)
+				document.body.classList.remove("special-" + name);
+				
 		}
 	}
+}
+
+doWhenBodyExists(() => {
+	applySpecialOccasionClasses();
+	GW.notificationCenter.addHandlerForEvent("DarkMode.computedModeDidChange", (info) => {
+		applySpecialOccasionClasses();
+	});
 });
 </script>
 <script>
@@ -3729,10 +3748,30 @@ DarkMode = {
     currentMode: () => {
         return (localStorage.getItem("dark-mode-setting") || "auto");
     },
+
+	/*	Returns currently color mode (light or dark).
+		Based on saved selector mode, plus system setting (if selected mode is
+		‘auto’).
+	 */
+	computedMode: () => {
+		return ((   DarkMode.currentMode() == "dark" 
+				|| (   DarkMode.currentMode() == "auto" 
+					&& GW.mediaQueries.systemDarkModeActive.matches))
+				? "dark"
+				: "light");
+	}
 };
 
 //	Activate saved mode.
 DarkMode.setMode();
+
+//	Set up mode change events.
+GW.notificationCenter.addHandlerForEvent("DarkMode.didSetMode", (info) => {
+	GW.notificationCenter.fireEvent("DarkMode.computedModeDidChange");
+});
+doWhenMatchMedia(GW.mediaQueries.systemDarkModeActive, "DarkMode.fireComputedModeDidChangeEventForSystemDarkModeChange", () => {
+	GW.notificationCenter.fireEvent("DarkMode.computedModeDidChange");
+});
 </script>
 <script>
 ReaderMode = {
