Improve print styles, part II

--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -1217,6 +1217,43 @@ span.smallcaps {
  */
 
 
+/****************/
+/* PRINT STYLES */
+/****************/
+
+@media print {
+	:root {
+		--GW-TOC-background-color: transparent;
+		--GW-abstract-background-color: transparent;
+		--GW-code-element-background-color: transparent;
+		--GW-math-block-background-color: transparent;
+	}
+
+	blockquote {
+		--GW-blockquote-background-color: transparent !important;
+	}
+	
+	#ui-elements-container,
+	#sidebar {
+		display: none;
+	}
+
+	body {
+		margin: 0;
+	}
+	main {
+		margin: 1em;
+	}
+	h1, h2, h3, h4, h5, h6 {
+		margin-left: 0;
+	}
+	.markdownBody {
+		line-height: 1.6;
+		text-align: justify;
+	}
+}
+
+
 /*********************/
 /* SPECIAL OCCASIONS */
 /*********************/
