--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -1545,6 +1545,43 @@ span.smallcaps {
  */
 
 
+/****************/
+/* PRINT STYLES */
+/****************/
+
+@media print {
+	:root {
+		--GW-TOC-background-color: transparent;
+		--GW-abstract-background-color: transparent;
+		--GW-code-element-background-color: transparent;
+		--GW-math-block-background-color: transparent;
+	}
+
+	blockquote {
+		--GW-blockquote-background-color: transparent !important;
+	}
+	
+	#ui-elements-container,
+	#sidebar {
+		display: none;
+	}
+
+	body {
+		margin: 0;
+	}
+	main {
+		margin: 1em;
+	}
+	h1, h2, h3, h4, h5, h6 {
+		margin-left: 0;
+	}
+	.markdownBody {
+		line-height: 1.6;
+		text-align: justify;
+	}
+}
+
+
 /*********************/
 /* SPECIAL OCCASIONS */
 /*********************/
@@ -2346,7 +2383,8 @@ GW.mediaQueries = {
     mobileWidth:           matchMedia("(max-width: 649px)"),
     systemDarkModeActive:  matchMedia("(prefers-color-scheme: dark)"),
     hoverAvailable:        matchMedia("only screen and (hover: hover) and (pointer: fine)"),
-    portraitOrientation:   matchMedia("(orientation: portrait)")
+    portraitOrientation:   matchMedia("(orientation: portrait)"),
+    printView:             matchMedia("print")
 };
 
 GW.isMobile = () => {
