--- a/css/default.css
+++ b/css/default.css
@@ -3448,11 +3448,8 @@ body.index-directory #footer {
 /*│ Aux-link pop-frames. │*/
 /*└──────────────────────┘*/
 
-.popframe-body.aux-links .aux-links-block > p:first-child {
-    display: none;
-}
-.popframe-body.aux-links .columns ul {
-    margin: 0.75em 0 1em 0;
+.popframe-body .aux-links-block ul {
+    margin: 0.75em 0 0.5em 0;
     padding: 0 0 0 1.75em;
 }
 
