--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -3265,7 +3265,7 @@ GW.notificationCenter = {
             event, AND (b) the handler we’re registering is being assigned to a
             specific phase, do we have anything to do here...
          */
-        if (   options.phase
+        if (   options.phase > ""
             && phaseOrder) {
             /*  Get the target phase name, which may be the full value of the
                 ‘phase’ key of the options dictionary, OR it may be that value
@@ -3312,7 +3312,7 @@ GW.notificationCenter = {
             let phaseAt = (index) => {
                 if (index >= handlers.length)
                     return null;
-                let parts = handlers[index].options.phase.match(/^([<>]?)(.+)/);
+                let parts = handlers[index].options.phase.match(/^([<>]?)(.*)$/);
                 return {
                     phase: parts[2],
                     before: (parts[1] == "<"),
