--- a/templates/default.html
+++ b/templates/default.html
@@ -110,7 +110,7 @@
               <span id="page-confidence"><a href="/About#confidence-tags" title="Explanation of 'confidence' metadata: probability of overall being meaningfully correct, expressed as Kesselman Estimative Words (ranging 0–100%: 'certain'/'highly likely'/'likely'/'possible'/'unlikely'/'highly unlikely'/'remote'/'impossible')">certainty</a>: <em>$confidence$</em></span>
               <span id="page-importance"><a href="/About#importance-tags" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world.">importance</a>: <em>$importance$</em></span> <br>
               $if(backlinksYes)$<span class="backlinks"><a id="page=backlinks" class="backlinks" href="#backlinks" title="Reverse citations/backlinks for this page (the list of other pages which link to this page).">backlinks</a></span>$endif$
-              $if(similarsYes)$<span class="similars"><a id="similars" class="similars" href="/metadata/annotations/similars/$escapedURL$" title="Similar links for this link (by text embedding).">similar</a></span>$endif$
+              $if(similarsYes)$<span class="similars"><a class="similars" href="#similars" title="Similar links for this link (by text embedding).">similar</a></span>$endif$
               <span class="link-bibliography"><a id="page-link-bibliography" href="#link-bibliography" title="Bibliography of links cited in this page (forward citations).">bibliography</a></span>
           </div>
         </div>
@@ -121,13 +121,17 @@
         $body$
 
         $if(index)$ $else$
-        <section id="further-reading" class="level1">
+        $if(backlinksYes)$<section id="further-reading" class="level1">
           <h1><a href="#further-reading" title="Link to section: § 'Further Reading'">Further Reading</a></h1>
-          $if(backlinksYes)$<a id="backlinks" href="/metadata/annotations/backlinks/$escapedURL$" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="backlinks include">backlinks</a>$endif$
-        </section>
+          <a id="backlinks" href="/metadata/annotations/backlinks/$escapedURL$" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="backlinks include">backlinks</a>
+        </section>$endif$
         <section id="link-bibliography" class="level1">
           <a id="link-bibliography-link-footer-transclusion" href="/docs/link-bibliography$url$#link-bibliography" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-unwrap include-identify-not">Link Bibliography</a>
-        </section>$endif$
+        </section>
+        $if(similarsYes)$<section id="similar-links-section" class="level1">
+          <a id="similars" class="similars" href="/metadata/annotations/similars/$escapedURL$" title="Similar links for this link (by text embedding).">similar</a>
+          </section>$endif$
+          $endif$
         </div> <!-- NOTE: unmatched, because it closes the opening div from the hakyll.hs $$body$$ Pandoc template -->
 
         <nav id="navigation">
