--- a/templates/default.html
+++ b/templates/default.html
@@ -129,6 +129,7 @@
           <a id="link-bibliography-link-footer-transclusion" href="/docs/link-bibliography$url$#link-bibliography" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-unwrap include-identify-not">Link Bibliography</a>
         </section>
         $if(similarsYes)$<section id="similar-links-section" class="level1">
+          <h1><a href="#similar-links-section" title="Link to section: § 'Similar Links'">Similar Links</a></h1>
           <a id="similars" class="similars" href="/metadata/annotations/similars/$escapedURL$" title="Similar links for this link (by text embedding). Lazily-transcluded version at footer of page for easier scrolling." class="include-unwrap include-identify-not">similar</a>
           </section>$endif$
           $endif$
