--- a/css/links.css
+++ b/css/links.css
@@ -72,17 +72,39 @@ body.index .has-content .indicator-hook {
 
 /*  ToCs in pop-frames, and also in link bibliographies, directory indexes, etc.
  */
-.popframe-body .TOC a,
-.popframe-body .TOC a *,
+.popframe-body .TOC a:link,
+.popframe-body .TOC a:link *,
 blockquote .TOC a:link,
-blockquote .TOC a:link * {
+blockquote .TOC a:link *,
+.TOC-links-only a:link,
+.TOC-links-only a:link * {
     background: none;
     text-shadow: none;
 }
+
 .popframe-body .TOC a::after,
-blockquote .TOC a::after {
+blockquote .TOC a::after,
+.TOC-links-only a::after {
     display: none;
 }
+
+.popframe-body .TOC a:hover::after,
+blockquote .TOC a:hover::after,
+.TOC-links-only a:hover::after {
+    margin: 0;
+    bottom: unset;
+    font-size: inherit;
+    opacity: unset;
+}
+
+.popframe-body .TOC a[data-link-icon]:hover::after,
+blockquote .TOC a[data-link-icon]:hover::after,
+.TOC-links-only a[data-link-icon]:hover::after {
+    background-image: none;
+    padding: 0;
+    opacity: 1.0;
+}
+
 
 /**************/
 /* LINK ICONS */
