Fix selector bug with abstracts

--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -1206,7 +1206,7 @@ body.justified-not .markdownBody li {
     font-variant-numeric: oldstyle-nums;
 }
 
-.abstract > blockquote {
+.abstract blockquote {
     margin: 0 0 1.5em 0;
     background-color: var(--GW-abstract-background-color);
     border-color: var(--GW-abstract-border-color);
