Fix styling bugs with abstracts

--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -732,6 +732,10 @@ body.index #markdownBody ul > li:nth-of-type(n+2) {
 /*= Directory indexes =*/
 /*=-------------------=*/
 
+.abstract.abstract-tag-directory blockquote {
+	margin-top: 1em;
+}
+
 #TOC.TOC-links-only {
 	padding-top: 2.75em;
 }
@@ -882,12 +886,12 @@ body.justified-not .markdownBody li {
     margin: 0 0 1.5em 0;
     background-color: var(--GW-abstract-background-color);
     border-color: var(--GW-abstract-border-color);
-    padding: 0.9rem 1.25rem 0.95rem 1.25rem;
+    padding-top: 0.9em;
     clear: none;
 }
 @media all and (max-width: 649px) {
 	.abstract blockquote {
-    	padding: 0.75rem 1rem 0.8rem 1rem;
+	    padding-top: 0.75rem;
 	}
 }
 
