--- a/templates/default.html
+++ b/templates/default.html
@@ -48,7 +48,7 @@
     <meta name="og:description" content="$description$">$endif$
     $if(thumbnail)$<meta property="og:image" content="https://www.gwern.net$thumbnailSmall$">
     $if(thumbnailText)$<meta property="og:image:alt" content="$thumbnailText$">$endif$
-    $else$<meta property="og:image" content="https://www.gwern.net/static/img/logo/logo-whitebg-large-border.png-530px.png">
+    $else$<meta property="og:image" content="https://www.gwern.net/static/img/logo/logo-whitebg-large-border.png-530px.jpg">
     <meta property="og:image:alt" content="Default thumbnail text: the Gwern.net site logo, a logotype of a large blackletter fraktur capital letter 'G' on a white background.">$endif$
     <meta property="og:image:height" content="$thumbnailHeight$">
     <meta property="og:image:width" content="$thumbnailWidth$">
